WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
311132
nfl.com: CC does not appear for videos inline
https://bugs.webkit.org/show_bug.cgi?id=311132
Summary
nfl.com: CC does not appear for videos inline
Dana Estra
Reported
2026-03-30 13:37:42 PDT
nfl.com: CC does not appear for videos inline
Attachments
Add attachment
proposed patch, testcase, etc.
Dana Estra
Comment 1
2026-03-30 13:37:44 PDT
<
rdar://problem/171113872
>
Dana Estra
Comment 2
2026-03-30 13:48:31 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/61716
EWS
Comment 3
2026-03-30 20:54:59 PDT
Committed
310280@main
(fb160f75b9e4): <
https://commits.webkit.org/310280@main
> Reviewed commits have been landed. Closing PR #61716 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug