nfl.com: CC does not appear for videos inline https://bugs.webkit.org/show_bug.cgi?id=311132 rdar://171113872

Reviewed by Jer Noble.

NFL.com uses HLS on Safari for iPhone because we disable media source
by default on iPhone, while it uses media source for other user agents. NFL has poor
transcriptions for at least one HLS video compared to the corresponding media
source video. This change creates a new quirk for nfl.com on iPhone that
requests the Chrome for Android user agent and enables the Media Source API.

No new tests.

* Source/WebCore/page/Quirks.cpp:
* Source/WebCore/page/Quirks.h:
* Source/WebKit/UIProcess/ios/WebPageProxyIOS.mm:
(WebKit::WebPageProxy::effectiveContentModeAfterAdjustingPolicies):

Canonical link: https://commits.webkit.org/310280@main