Source/WebKit/UIProcess/ios/WebPageProxyIOS.mm
@@ -1522,9 +1522,17 @@ WebContentMode WebPageProxy::effectiveContentModeAfterAdjustingPolicies(API::Web
         if (auto selectors = Quirks::defaultVisibilityAdjustmentSelectors(request.url()))
             policies.setVisibilityAdjustmentSelectors({ WTF::move(*selectors) });
 
+        if (Quirks::needsMediaSourceEnabled(request.url()))
+            policies.setMediaSourcePolicy(WebsiteMediaSourcePolicy::Enable);
+
         if (Quirks::needsIPhoneUserAgent(request.url())) {
             policies.setCustomUserAgent(makeStringByReplacingAll(standardUserAgentWithApplicationName(m_applicationNameForUserAgent), "iPad"_s, "iPhone"_s));
             policies.setCustomNavigatorPlatform("iPhone"_s);
+            return WebContentMode::Mobile;
+        }
+
+        if (Quirks::needsChromeForAndroidUserAgent(request.url())) {
+            policies.setCustomUserAgent("Mozilla/5.0 (Linux; Android 10; K) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/138.0.0.0 Mobile Safari/537.36"_s);
             return WebContentMode::Mobile;
         }
     }
